[gd_scene load_steps=13 format=3 uid="uid://cmne264dkm6l5"]

[ext_resource type="Texture2D" uid="uid://cnig4cnlesawh" path="res://Assets/SamAssets/Placeholder1.png" id="1_c0qil"]
[ext_resource type="Script" uid="uid://dqdpurbolymav" path="res://Scenes/SamScenesAndScripts/platformer_logic.gd" id="1_ms48t"]
[ext_resource type="PackedScene" uid="uid://du5i5alatbswb" path="res://Scenes/SamScenesAndScripts/playerplatformer.tscn" id="2_g358o"]
[ext_resource type="Texture2D" uid="uid://bte3wuqwkulpn" path="res://Assets/AlexisAssets/hearth1.png" id="2_kc33n"]
[ext_resource type="Shader" uid="uid://bwtity1bwaoio" path="res://Scenes/SamScenesAndScripts/chromatic.gdshader" id="2_u5ing"]
[ext_resource type="PackedScene" uid="uid://cpvnu34q0avff" path="res://Scenes/SamScenesAndScripts/forest_background.tscn" id="2_ywuxp"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kc33n"]
shader = ExtResource("2_u5ing")
shader_parameter/aberration = 0.1
shader_parameter/strength = 0.01

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g358o"]
size = Vector2(102, 172.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ms48t"]
size = Vector2(1168, 180)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rsp02"]
size = Vector2(30.75, 508.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ywuxp"]
size = Vector2(34.5, 502)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u5ing"]
size = Vector2(44.5, 254.75)

[node name="Platformer1" type="Node2D"]
script = ExtResource("1_ms48t")

[node name="Transition" type="CanvasLayer" parent="."]
layer = 3
follow_viewport_enabled = true

[node name="TransitionRect" type="ColorRect" parent="Transition"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 905.0
offset_bottom = 509.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="HeartSprite" type="Sprite2D" parent="Transition"]
texture_filter = 1
texture = ExtResource("2_kc33n")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_priority = 2
layer = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_kc33n")
offset_right = 1568.0
offset_bottom = 882.0
mouse_filter = 2
color = Color(1, 1, 1, 0)

[node name="forest_background" parent="." instance=ExtResource("2_ywuxp")]

[node name="Boss1" type="Area2D" parent="."]
position = Vector2(10, 251)

[node name="Boss1Trigger" type="CollisionShape2D" parent="Boss1"]
position = Vector2(997.25, 402.12)
shape = SubResource("RectangleShape2D_g358o")

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2(10, 251)

[node name="FloorSprite" type="Sprite2D" parent="Floor"]
visible = false
modulate = Color(0, 0.505882, 0.129412, 1)
position = Vector2(580, 613)
scale = Vector2(7.6319, 1.06388)
texture = ExtResource("1_c0qil")

[node name="FloorCollision" type="CollisionShape2D" parent="Floor"]
position = Vector2(575, 576)
shape = SubResource("RectangleShape2D_ms48t")

[node name="RightCollision" type="CollisionShape2D" parent="Floor"]
position = Vector2(1163, 242)
shape = SubResource("RectangleShape2D_rsp02")

[node name="LeftCollison" type="CollisionShape2D" parent="Floor"]
position = Vector2(-16.75, 244)
shape = SubResource("RectangleShape2D_ywuxp")

[node name="Hub" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(10, 251)

[node name="HubTrigger" type="CollisionShape2D" parent="Hub"]
position = Vector2(15.75, 364.375)
shape = SubResource("RectangleShape2D_u5ing")

[node name="PlayerPlatformer" parent="." instance=ExtResource("2_g358o")]
position = Vector2(326, 679)

[connection signal="body_entered" from="Boss1" to="." method="_on_boss_1_body_entered"]
[connection signal="body_exited" from="Boss1" to="." method="_on_boss_1_body_exited"]
[connection signal="body_entered" from="Hub" to="." method="_on_hub_body_entered"]
[connection signal="body_exited" from="Hub" to="." method="_on_hub_body_exited"]
