[gd_scene load_steps=13 format=3 uid="uid://8r21imrjgorp"]

[ext_resource type="Texture2D" uid="uid://cnig4cnlesawh" path="res://Assets/SamAssets/Placeholder1.png" id="1_h41p6"]
[ext_resource type="Script" uid="uid://dqdpurbolymav" path="res://Scenes/SamScenesAndScripts/platformer_logic.gd" id="1_qj7cj"]
[ext_resource type="Texture2D" uid="uid://bte3wuqwkulpn" path="res://Assets/AlexisAssets/hearth1.png" id="2_5ogck"]
[ext_resource type="Shader" uid="uid://b3vmibw3matnk" path="res://Scenes/SamScenesAndScripts/chromatic.gdshader" id="2_llapy"]
[ext_resource type="PackedScene" uid="uid://du5i5alatbswb" path="res://Scenes/SamScenesAndScripts/playerplatformer.tscn" id="2_qj7cj"]
[ext_resource type="PackedScene" uid="uid://cpvnu34q0avff" path="res://Scenes/SamScenesAndScripts/forest_background.tscn" id="4_wpnnp"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5ogck"]
shader = ExtResource("2_llapy")
shader_parameter/aberration = 0.1
shader_parameter/strength = 0.01

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g358o"]
size = Vector2(102, 172.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ms48t"]
size = Vector2(1168, 180)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rsp02"]
size = Vector2(30.75, 508.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ywuxp"]
size = Vector2(34.5, 502)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u5ing"]
size = Vector2(44.5, 254.75)

[node name="Platformer2" type="Node2D"]
position = Vector2(7, 246)
script = ExtResource("1_qj7cj")

[node name="Transition" type="CanvasLayer" parent="."]
layer = 3

[node name="TransitionRect" type="ColorRect" parent="Transition"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="HeartSprite" type="Sprite2D" parent="Transition"]
visible = false
texture_filter = 1
texture = ExtResource("2_5ogck")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_priority = 2
layer = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_5ogck")
offset_right = 1568.0
offset_bottom = 882.0
mouse_filter = 2
color = Color(1, 1, 1, 0)

[node name="Boss2" type="Area2D" parent="."]

[node name="Boss2Sprite" type="Sprite2D" parent="Boss2"]
modulate = Color(0.972928, 0.587945, 1.15514e-06, 1)
position = Vector2(1000.25, 397.87)
scale = Vector2(0.800614, 0.800614)
texture = ExtResource("1_h41p6")

[node name="Boss2Trigger" type="CollisionShape2D" parent="Boss2"]
position = Vector2(997.25, 402.12)
shape = SubResource("RectangleShape2D_g358o")

[node name="Label" type="Label" parent="Boss2"]
offset_left = 953.0
offset_top = 324.0
offset_right = 1047.0
offset_bottom = 347.0
text = "Hi im a boss"
metadata/_edit_use_anchors_ = true

[node name="Floor" type="StaticBody2D" parent="."]

[node name="FloorCollision" type="CollisionShape2D" parent="Floor"]
position = Vector2(575, 576)
shape = SubResource("RectangleShape2D_ms48t")

[node name="RightCollision" type="CollisionShape2D" parent="Floor"]
position = Vector2(1163, 242)
shape = SubResource("RectangleShape2D_rsp02")

[node name="LeftCollison" type="CollisionShape2D" parent="Floor"]
position = Vector2(-16.75, 244)
shape = SubResource("RectangleShape2D_ywuxp")

[node name="Hub" type="Area2D" parent="."]

[node name="HubTrigger" type="CollisionShape2D" parent="Hub"]
position = Vector2(15.75, 364.375)
shape = SubResource("RectangleShape2D_u5ing")

[node name="PlayerPlatformer" parent="." instance=ExtResource("2_qj7cj")]
position = Vector2(318, 425)

[node name="forest_background" parent="." instance=ExtResource("4_wpnnp")]
visible = false
position = Vector2(-3, 6)

[connection signal="body_entered" from="Boss2" to="." method="_on_boss_2_body_entered"]
[connection signal="body_exited" from="Boss2" to="." method="_on_boss_2_body_exited"]
[connection signal="body_entered" from="Hub" to="." method="_on_hub_body_entered"]
[connection signal="body_exited" from="Hub" to="." method="_on_hub_body_exited"]
