[gd_scene load_steps=32 format=3 uid="uid://cv4pj7011cc60"]

[ext_resource type="Script" uid="uid://dqdpurbolymav" path="res://Scenes/SamScenesAndScripts/platformer_logic.gd" id="1_tpqbk"]
[ext_resource type="PackedScene" uid="uid://cany8rxhephm" path="res://Scenes/SamScenesAndScripts/pause_menu.tscn" id="2_cek5l"]
[ext_resource type="Texture2D" uid="uid://cnig4cnlesawh" path="res://Assets/SamAssets/Placeholder1.png" id="2_jekxf"]
[ext_resource type="Shader" uid="uid://bwtity1bwaoio" path="res://Scenes/SamScenesAndScripts/chromatic.gdshader" id="2_r4n7g"]
[ext_resource type="Texture2D" uid="uid://bte3wuqwkulpn" path="res://Assets/AlexisAssets/hearth1.png" id="2_tgdpd"]
[ext_resource type="PackedScene" uid="uid://du5i5alatbswb" path="res://Scenes/SamScenesAndScripts/playerplatformer.tscn" id="3_r4n7g"]
[ext_resource type="PackedScene" uid="uid://cpvnu34q0avff" path="res://Scenes/SamScenesAndScripts/forest_background.tscn" id="4_jekxf"]
[ext_resource type="Texture2D" uid="uid://cqb7oavaa55v3" path="res://Assets/FinalFightAssets/AnimationSheet_Character.png" id="6_lsu4u"]
[ext_resource type="Texture2D" uid="uid://13xpsaboxi18" path="res://Assets/SamAssets/Dimensional_Portal.png" id="6_ybut8"]
[ext_resource type="PackedScene" uid="uid://dfs1v8o23car6" path="res://Scenes/SamScenesAndScripts/dialogue.tscn" id="7_86dwe"]
[ext_resource type="PackedScene" uid="uid://cifpnmy1ws14e" path="res://Scenes/SamScenesAndScripts/sign.tscn" id="8_q41a0"]
[ext_resource type="FontFile" uid="uid://bfqrqr5je6vjj" path="res://Assets/AlexisAssets/Font.ttf" id="9_86dwe"]
[ext_resource type="AudioStream" uid="uid://qpeskfhqxsic" path="res://Assets/SamAssets/mountain-knight-castle-medieval-fantasy-orchestral-music-264986.mp3" id="12_s71u5"]
[ext_resource type="AudioStream" uid="uid://cohvlk353tdql" path="res://Assets/SamAssets/ambience-wind-blowing-through-trees-01-186986.mp3" id="13_lsu4u"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tgdpd"]
shader = ExtResource("2_r4n7g")
shader_parameter/aberration = 0.1
shader_parameter/strength = 0.01

[sub_resource type="AtlasTexture" id="AtlasTexture_7hc3x"]
atlas = ExtResource("6_lsu4u")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vaws3"]
atlas = ExtResource("6_lsu4u")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_3ydpf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hc3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vaws3")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g358o"]
size = Vector2(102, 172.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ms48t"]
size = Vector2(1168, 180)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rsp02"]
size = Vector2(30.75, 508.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ywuxp"]
size = Vector2(34.5, 502)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tgdpd"]
size = Vector2(174.5, 254.75)

[sub_resource type="AtlasTexture" id="AtlasTexture_dmd4q"]
atlas = ExtResource("6_ybut8")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5gap"]
atlas = ExtResource("6_ybut8")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_md1j0"]
atlas = ExtResource("6_ybut8")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dwfiy"]
atlas = ExtResource("6_ybut8")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2g51e"]
atlas = ExtResource("6_ybut8")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6csd"]
atlas = ExtResource("6_ybut8")
region = Rect2(64, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_spps7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dmd4q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5gap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_md1j0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dwfiy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2g51e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6csd")
}],
"loop": true,
"name": &"portal",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ybut8"]
size = Vector2(313, 208)

[node name="Platformer3" type="Node2D"]
position = Vector2(3, 249)
script = ExtResource("1_tpqbk")

[node name="PauseMenu" type="CanvasLayer" parent="."]
layer = 5

[node name="PauseMenu" parent="PauseMenu" instance=ExtResource("2_cek5l")]
z_index = 20

[node name="Transition2" type="CanvasLayer" parent="."]
layer = 6
follow_viewport_enabled = true

[node name="TransitionRect" type="ColorRect" parent="Transition2"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -955.0
offset_top = -607.0
offset_right = -50.0
offset_bottom = -98.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
color = Color(0, 0, 0, 1)

[node name="Transition" type="CanvasLayer" parent="."]
layer = 3
follow_viewport_enabled = true

[node name="TransitionRect" type="ColorRect" parent="Transition"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -955.0
offset_top = -607.0
offset_right = -192.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
color = Color(0, 0, 0, 1)

[node name="HeartSprite" type="Sprite2D" parent="Transition"]
texture_filter = 1
texture = ExtResource("2_tgdpd")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_priority = 2
layer = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_tgdpd")
offset_right = 1568.0
offset_bottom = 882.0
mouse_filter = 2
color = Color(1, 1, 1, 0)

[node name="forest_background" parent="." instance=ExtResource("4_jekxf")]
position = Vector2(-69, 70)

[node name="Boss3" type="Area2D" parent="."]

[node name="Boss3Sprite" type="AnimatedSprite2D" parent="Boss3"]
modulate = Color(0.734492, 0.000885221, 0.812406, 1)
texture_filter = 1
position = Vector2(981, 417.12)
scale = Vector2(3.5625, 3.5625)
sprite_frames = SubResource("SpriteFrames_3ydpf")
autoplay = "default"
frame_progress = 0.0378415
flip_h = true

[node name="Boss3Trigger" type="CollisionShape2D" parent="Boss3"]
position = Vector2(997.25, 402.12)
shape = SubResource("RectangleShape2D_g358o")

[node name="CanvasLayer" type="CanvasLayer" parent="Boss3"]
layer = 2
follow_viewport_enabled = true

[node name="DialogueBoss" parent="Boss3/CanvasLayer" instance=ExtResource("7_86dwe")]
unique_name_in_owner = true
position = Vector2(1004, 504)

[node name="Floor" type="StaticBody2D" parent="."]

[node name="FloorSprite" type="Sprite2D" parent="Floor"]
visible = false
modulate = Color(0, 0.505882, 0.129412, 1)
position = Vector2(580, 613)
scale = Vector2(7.6319, 1.06388)
texture = ExtResource("2_jekxf")

[node name="FloorCollision" type="CollisionShape2D" parent="Floor"]
position = Vector2(575, 576)
shape = SubResource("RectangleShape2D_ms48t")

[node name="RightCollision" type="CollisionShape2D" parent="Floor"]
position = Vector2(1163, 242)
shape = SubResource("RectangleShape2D_rsp02")

[node name="LeftCollison" type="CollisionShape2D" parent="Floor"]
position = Vector2(-16.75, 244)
shape = SubResource("RectangleShape2D_ywuxp")

[node name="Hub" type="Area2D" parent="."]

[node name="HubTrigger" type="CollisionShape2D" parent="Hub"]
position = Vector2(80.75, 364.375)
shape = SubResource("RectangleShape2D_tgdpd")

[node name="TestPortal" type="AnimatedSprite2D" parent="Hub"]
modulate = Color(1, 0, 0, 1)
texture_filter = 1
position = Vector2(56, 406)
scale = Vector2(6.61719, 6.61719)
sprite_frames = SubResource("SpriteFrames_spps7")
animation = &"portal"
autoplay = "portal"

[node name="CanvasLayer" type="CanvasLayer" parent="Hub"]
layer = 2
follow_viewport_enabled = true

[node name="Dialogue" parent="Hub/CanvasLayer" instance=ExtResource("7_86dwe")]
unique_name_in_owner = true
position = Vector2(58, 504)

[node name="BossesSign" parent="." instance=ExtResource("8_q41a0")]
position = Vector2(324, 450)

[node name="BossesLabel" type="Label" parent="BossesSign"]
texture_filter = 1
offset_left = -43.0
offset_top = -60.0
offset_right = -4.0
offset_bottom = -31.0
scale = Vector2(2.24001, 2.24001)
theme_override_constants/line_spacing = -4
theme_override_fonts/font = ExtResource("9_86dwe")
text = "Boss 3
->"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="PlayerPlatformer" parent="." instance=ExtResource("3_r4n7g")]
position = Vector2(213, 436)

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(997, 372)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-15.5, 1)
shape = SubResource("RectangleShape2D_ybut8")

[node name="fight" type="Label" parent="Area2D/CollisionShape2D"]
visible = false
offset_left = -108.5
offset_top = -38.0
offset_right = 124.5
offset_bottom = -15.0
text = "Prepare yourself for battle"

[node name="HubMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_s71u5")

[node name="Ambience" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_lsu4u")
volume_db = -3.0

[connection signal="body_entered" from="Boss3" to="." method="_on_boss_3_body_entered"]
[connection signal="body_exited" from="Boss3" to="." method="_on_boss_3_body_exited"]
[connection signal="body_entered" from="Hub" to="." method="_on_hub_body_entered"]
[connection signal="body_exited" from="Hub" to="." method="_on_hub_body_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_body_entered"]

[editable path="PauseMenu/PauseMenu"]
